--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.10)
 project(lab0)
 set(CMAKE_CXX_STANDARD 17)
-add_subdirectory(src/csvwriter)
-add_subdirectory(src/filereading)
-add_subdirectory(src/wordcounter)
+add_subdirectory(src/CSVWriter)
+add_subdirectory(src/FileReading)
+add_subdirectory(src/WordCounter)
 add_executable(lab0 src/main.cpp)
-target_link_libraries(lab0 csvWriter fileReading wordCounter)
+target_link_libraries(lab0 CSVWriter FileReading WordCounter)
