--- a/src/csvwriter/CMakeLists.txt
+++ b/src/csvwriter/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(csvWriter csvwriter.cpp)
-target_include_directories(csvWriter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(CSVWriter CSVWriter.cpp)
+target_include_directories(CSVWriter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
