--- a/src/wordcounter/CMakeLists.txt
+++ b/src/wordcounter/CMakeLists.txt
@@ -1,2 +1,2 @@
-add_library(wordCounter wordcounter.cpp)
-target_include_directories(wordCounter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(WordCounter WordCounter.cpp)
+target_include_directories(WordCounter PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
